2013-11-19  Roger Fong  <roger_fong@apple.com>

        Update ANGLE sources.
        https://bugs.webkit.org/show_bug.cgi?id=124615.

        Reviewed by Dean Jackson.

        Update ANGLE to checkout a60e0805721f62c28a55faf2df74472cc5fc91fc.
        Modify xcodeproj files as necessary, update plist.
        Stop using DerivedSources.make and just use the generated sources that are checked into ANGLE.
        Add a note to bison generated files indicating that Apple elects to distribute said files under the BSD license: 
        ExpressionParser.cpp, glslang_tab.cpp, glslang_tab.h.

        * ANGLE.plist:
        * ANGLE.xcodeproj/project.pbxproj:
        * DerivedSources.make: Removed.
        * include/EGL/egl.h:
        * include/EGL/eglsoftlinking.h: Removed.
        * include/GLES2/gl2.h:
        * include/GLES2/gl2softlinking.h: Removed.
        * include/GLSLANG/ShaderLang.h:
        * include/KHR/khrplatform.h:
        * src/ANGLE.sln: Added.
        * src/build_angle.gypi:
        * src/common/debug.h:
        * src/common/event_tracer.cpp: Added.
        (gl::TraceGetTraceCategoryEnabledFlag):
        (gl::TraceAddTraceEvent):
        * src/common/event_tracer.h: Added.
        * src/common/version.h:
        * src/compiler/CodeGen.cpp: Added.
        (ConstructCompiler):
        (DeleteCompiler):
        * src/compiler/CodeGenGLSL.cpp: Removed.
        * src/compiler/CodeGenHLSL.cpp: Removed.
        * src/compiler/Common.h:
        (NewPoolTString):
        * src/compiler/Compiler.cpp:
        (TCompiler::Init):
        (TCompiler::compile):
        (TCompiler::InitBuiltInSymbolTable):
        (TCompiler::clearResults):
        (TCompiler::collectVariables):
        * src/compiler/ConstantUnion.h:
        * src/compiler/DetectDiscontinuity.cpp:
        * src/compiler/InfoSink.h:
        * src/compiler/InitializeDll.cpp:
        (InitProcess):
        (DetachProcess):
        * src/compiler/InitializeDll.h: